[gd_scene load_steps=2 format=2]

[ext_resource path="res://CustomNight.gd" type="Script" id=1]

[node name="CustomNight" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="CanvasLayer" parent="."]

[node name="Back" type="Button" parent="Buttons"]
margin_left = 21.0
margin_top = 30.0
margin_right = 63.0
margin_bottom = 50.0
rect_scale = Vector2( 4.5255, 4.36308 )
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBoxes" type="CanvasLayer" parent="."]

[node name="RexyAiLvl" type="LineEdit" parent="TextBoxes"]
margin_left = 87.0
margin_top = 314.0
margin_right = 145.0
margin_bottom = 338.0
rect_scale = Vector2( 2.51882, 3.69042 )
placeholder_text = "Rexy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BabyBunnyAiLvl" type="LineEdit" parent="TextBoxes"]
margin_left = 257.0
margin_top = 313.0
margin_right = 344.0
margin_bottom = 337.0
rect_scale = Vector2( 2.21765, 3.86009 )
placeholder_text = "Baby Bunny"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrownieAiLvl" type="LineEdit" parent="TextBoxes"]
margin_left = 487.0
margin_top = 312.0
margin_right = 549.0
margin_bottom = 336.0
rect_scale = Vector2( 2.21765, 3.86009 )
placeholder_text = "Brownie"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExplodedAiLvl" type="LineEdit" parent="TextBoxes"]
margin_left = 653.0
margin_top = 310.0
margin_right = 723.0
margin_bottom = 334.0
rect_scale = Vector2( 2.21765, 3.86009 )
placeholder_text = "Exploded"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Back" to="." method="_on_Back_pressed"]
